--- a/SalesforceDataloader/WebContent/style.css
+++ b/SalesforceDataloader/WebContent/style.css
@@ -16,10 +16,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 }
 html { height: 101%; }
 body { 
-  background: #f0f0f0 url('images/bg.gif'); 
+/*   background: #f0f0f0 url('images/bg.gif');  */
+   background: #ffffff;  
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #313131;
-  font-size: 62.5%; 
+  font-size: 75.5%; 
   line-height: 1; 
 }
 
